// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`python snapshot 1`] = `
" \`inspect\` <span data-heading-title=\\"\`inspect\`\\" data-heading-id=\\"awscdkawsecrcfnpublicrepositoryinspect\\"></span>

\`\`\`python
def inspect(inspector: TreeInspector)
\`\`\`

# \`inspector\`<sup>Required</sup> <span data-heading-title=\\"\`inspector\`<sup>Required</sup>\\" data-heading-id=\\"awscdkawsecrcfnpublicrepositoryinspector\\"></span>

- *Type:* [\`aws_cdk.core.TreeInspector\`](#aws_cdk.core.TreeInspector)

tree inspector to collect and process attributes.

---
"
`;

exports[`typescript snapshot 1`] = `
" \`inspect\` <span data-heading-title=\\"\`inspect\`\\" data-heading-id=\\"awscdkawsecrcfnpublicrepositoryinspect\\"></span>

\`\`\`typescript
public inspect(inspector: TreeInspector)
\`\`\`

# \`inspector\`<sup>Required</sup> <span data-heading-title=\\"\`inspector\`<sup>Required</sup>\\" data-heading-id=\\"awscdkawsecrcfnpublicrepositoryinspector\\"></span>

- *Type:* [\`@aws-cdk/core.TreeInspector\`](#@aws-cdk/core.TreeInspector)

tree inspector to collect and process attributes.

---
"
`;
